--- a/Noteworthy/res/values/strings.xml
+++ b/Noteworthy/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Noteworthy</string>
+    <string name="add_stuff">Add A Class or Note</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_add_class">AddClass</string>
+    <string name="title_activity_classes">Classes</string>
 
 </resources>
