--- a/Noteworthy/res/values/strings.xml
+++ b/Noteworthy/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_class">AddClass</string>
     <string name="title_activity_classes">Classes</string>
-
+    
+    <string name="title_school">School</string>
+    <string name="title_course">Course</string>
+    <string name="title_professor">Professor</string>
+    
 </resources>
