my first commit

--- a/Noteworthy/res/values/strings.xml
+++ b/Noteworthy/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="title_course">Course</string>
     <string name="title_professor">Professor</string>
     <string name="emptyList">No Classes</string>
+    <string name="title_activity_calendar">CalendarActivity</string>
 
 </resources>
